--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-ehlo
+---
+layout: default
+---
+<ul>
+    <li class="otsikko">Uutisia / news</li>
+    <li>DD.MM.2020 - Uusi sivusto avattu! New site open!</li>
+</ul>
+
+
+
